--- a/client/src/index.css
+++ b/client/src/index.css
@@ -6,11 +6,12 @@ body {
     font-family: 'Quicksand';
     padding-top: 5%;
     word-wrap: break-word;
+    margin: 5%;
 }
 
 .logo {
-    width: 250px;
-    height: 250px;
+    width: 200px;
+    height: 38px;
 }
 
 .App {
@@ -29,12 +30,9 @@ body {
     margin: 2%;
 }
 
-.Transaction {
-    padding: 5;
-}
 
 .ConductTransaction, .TransactionPool {
-    margin: 10%;
+    margin: 2%;
 }
 
 a, a:hover {
@@ -44,4 +42,9 @@ a, a:hover {
 
 h4 {
 	text-align: left;
+}
+
+.container-fluid{
+  background-color: #363636;
+  padding : 1%;
 }
