--- a/client/src/index.css
+++ b/client/src/index.css
@@ -74,11 +74,11 @@ a, a:hover {
 
 
 .jumbo {
-    background: url('./assets/banner.png') no-repeat center right;
-    background-size: 85% 100%;
+    background: url('./assets/logo-inverse.png') no-repeat center center;
+    background-size: 50% 65%;
     height: 250px;
     position: relative;
-    background-color: white;
+    background-color: red;
     z-index: 2;
 }
 /*
